# MCP-Analytics-Orchestrator

./: .env.example  .gitignore  AI_Data_Analyst_MCP_Planning.md  README.md  pyproject.toml
.claude/: settings.local.json
backend/: config.py  main.py
backend/mcp/: executor.py  registry.py
backend/mcp/tools/: export_to_excel.py  generate_chart.py  load_csv.py  python_sandbox.py  run_pandas_query.py  summarize_findings.py  test_run_pandas_query.py
backend/models/: schemas.py
backend/routers/: analysis.py  files.py
backend/services/: groq_service.py  openai_service.py
backend/utils/: file_handler.py  logger.py
docs/: MEMORY.md  architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ChartViewer.jsx  ChatPanel.jsx  ExportDownload.jsx  LoadingSpinner.jsx  SummaryCard.jsx  UploadPanel.jsx
frontend/src/hooks/: useAnalysis.js
sandbox/: Dockerfile
