[project]
name = "ai-data-analyst"
version = "0.1.0"
description = "AI-powered data analysis assistant using OpenAI tool-calling and MCP pattern"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.30.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "docker>=7.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.0",
    "groq>=1.0.0",
    "langsmith>=0.7.10",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]
